--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ div.acceder {
 }
 
 .content {
-    margin: 30px;;
+    margin: 60px;;
 }
 
 .btn-google {
@@ -62,6 +62,12 @@ div.acceder {
     width: 15px;
     height: 15px;
 }
+
+input {
+    padding: 6px;
+    width: 60%;
+}
+
 
 .btn-enviar {
     border: 2px dashed #a6a6a6;
